fixed box alignement

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-*{
+* {
     font-family: 'Press Start 2P';
 }
 
-body{
+body {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,64 +10,68 @@ body{
     min-height: 100vh;
     background-color: rgb(235, 243, 243);
 }
-main{
+
+main {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     flex-grow: 1;
 }
-.btn-image{
+
+.btn-image {
     width: 150px;
     height: 150px;
     padding: 0;
 }
 
-nav{
-    display:flex;
+nav {
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: 0 0;
 }
-.title{
-    display:flex;
+
+.title {
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
-.title p{
+.title p {
     font-size: 40px;
     font-weight: bold;
+    font-style: oblique;
 }
 
 
-nav img{
+nav img {
     width: 50px;
     height: 50px;
     padding-left: 1.5rem;
 }
 
-.buttons-container{
+.buttons-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 5rem;
-    gap: 2rem;
+    margin: 2.0rem 2.0rem 4rem 0rem;
+    gap: 1.5rem;
 }
 
-.score-container{
+.score-container {
     display: flex;
     align-items: center;
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 4.5rem;
+    margin: 2.5rem;
     gap: 2.5rem;
 }
 
-.score-box{
+.score-box {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,7 +82,7 @@ nav img{
 }
 
 
-.computer-answer{
+.computer-answer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,23 +90,23 @@ nav img{
     min-width: 150px;
     min-height: 150px;
     padding: 0;
-    margin:0;
+    margin: 0;
     padding: 0;
 }
 
-.computer-play{
+.computer-play {
     border: 5px dashed black;
     width: 120px;
     height: 120px;
     padding: 1rem;
 }
 
-footer{
+footer {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    font-size:10px;
+    font-size: 10px;
     font-weight: 400;
     font-style: italic;
     padding: 0.5rem 0;
@@ -111,6 +115,8 @@ footer{
 
 
 
-nav, main, footer{
+nav,
+main,
+footer {
     flex-shrink: 0;
-}   
+}
